[package]
name = "ayaled-updated"
authors = [
	"Maya Matuszczyk maccraft123mc at gmail dot com>",
	"Lucas Melo <luluco250 at gmail dot com>"
]
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.144"
memmap = "0.7.0"
rmesg = { version = "1.0.20", default-features = false, features = ["sync"] }
rouille = "3.6.2"
